Make sure inputs don't have border radius on iOS

--- a/app/src/components/login/style.sass
+++ b/app/src/components/login/style.sass
@@ -23,6 +23,7 @@ form
       background: none
       border: 0
       border-bottom: 1px solid $unfocused-gray
+      border-radius: 0
       transition: border-bottom .25s
 
       font: 1em 'Lato'
